--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         let GAME_STATE = "start";
         const DRAW_HITBOXES = false;
 
+        let background;
+        let car;
+        let scoreboard;
+        let overlay;
+
         class Scoreboard {
             constructor(params) {
                 this.x = 5;
@@ -84,7 +89,6 @@
 
         }
 
-        let scoreboard = new Scoreboard({});
         class Entity {
             constructor(params) {
                 this.x = params.x || 0;
@@ -227,9 +231,9 @@
         class Collectible extends Entity {
             constructor(params) {
                 params.img = {};
-                const PILL_SCALE = 0.2;
+                const PILL_SCALE = 0.10;
                 super(params);
-                this.add_image('pill', 'static/img/cropped_pill.png', PILL_SCALE, function(){
+                this.add_image('pill', 'static/img/poppers_trim.png', PILL_SCALE, function(){
                     this.height = this.img['pill'].sHeight;
                     this.width = this.img['pill'].sWidth;
                     this.hitbox_height = this.height;
@@ -252,7 +256,6 @@
         Obstacle.list = {};
         Collectible.list = {}
         Collectible.flagged_for_deletion = [];
-        let car = new Car({scoreboard: scoreboard})
 
         class Background{
             constructor(params) {
@@ -332,10 +335,53 @@
                 }
             }
         }
-        let background;
 
         function drawBackground(){
             background.draw();
+        }
+
+        class Overlay{
+            constructor(){
+                this.img = {};
+                this.transparency = 0.2;
+                this.strobe_rate = 20;
+                this.strobe_counter = 0;
+                this.strobe_selector = 1;
+            }
+
+            async init(){
+                await this.add_image("lights1","static/img/lights1.png");
+                await this.add_image("lights2", "static/img/lights2.png");
+            }
+
+            add_image(name, path){
+                return new Promise((resolve, reject) => {
+                    this.img[name] = new Image();
+                    this.img[name].onload = () => {
+                        this.img[name].sHeight = this.img[name].height * this.TILE_SCALE;
+                        this.img[name].sWidth = this.img[name].width * this.TILE_SCALE;
+                        resolve(this.img[name].height)
+                    }
+                    this.img.onerror = reject;
+                    this.img[name].src = path;
+                });
+
+            }
+
+            draw(){
+                const switch_dict = {1:2, 2:1}
+                if (this.strobe_rate === this.strobe_counter){
+                    this.strobe_counter = 0;
+                    this.strobe_selector = switch_dict[this.strobe_selector]
+                } else {
+                    this.strobe_counter += 1
+                }
+                ctx.save();
+                ctx.globalAlpha = this.transparency;
+                ctx.drawImage(this.img['lights'+this.strobe_selector], 0, 0);
+                ctx.restore();
+            }
+
         }
 
         function drawObstacles(){
@@ -399,6 +445,12 @@
             const end_text = "Game Over!"
             ctx.fillText(end_text, WIDTH/2 - (end_text.length * (FONT_SIZE/2)) / 2, HEIGHT/2 - FONT_SIZE/2)
         }
+
+        function draw_overlay(){
+            if (scoreboard.meter_value > 50){
+                overlay.draw();
+            }
+        }
         function updatePlayer(){
                 // left right
                 if (keyboard_map['KeyD'] && keyboard_map['KeyA'] || !(keyboard_map['KeyD'] || keyboard_map['KeyA'])) // if both or neither are pressed
@@ -448,6 +500,7 @@
             scoreboard = init_pack['scoreboard'];
             car = init_pack['car'];
             background = init_pack['background'];
+            overlay = init_pack['overlay'];
             const music = init_pack['music'];
             draw_start_screen();
         }
@@ -468,6 +521,7 @@
                     drawPlayer();
                     drawObstacles();
                     drawHud();
+                    draw_overlay();
                 } else if (GAME_STATE === "start"){
                     draw_start_screen();
                     clearInterval(loop);
@@ -504,7 +558,8 @@
             const scoreboard = new Scoreboard({});
             object_pack['background'] = new Background({});
             await object_pack['background'].init();
-            console.log(object_pack['background']);
+            object_pack['overlay'] = new Overlay();
+            await object_pack['overlay'].init();
             object_pack['scoreboard'] = scoreboard;
             object_pack['car'] = new Car({scoreboard: scoreboard})
             object_pack['music'] = document.getElementById('music');
