fixing path to slug image

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 await this.add_image("lights1","static/img/lights1.png");
                 await this.add_image("lights2", "static/img/lights2.png");
                 await this.add_image("bikini", "static/img/psychodelics/pixel_blue_bikini_trim.png")
-                await this.add_image("slug","static/img/slug_down.png" )
+                await this.add_image("slug","static/img/psychodelics/slug_down.png" )
             }
 
             add_image(name, path){
